# NerualNetwork

./: .gitignore  CMakeLists.txt  Layer设计说明.md  README.md  架构.md  设计文档.md
lib/: CMakeLists.txt  FileReader.cpp  FileReader.h  Functions.cpp  IFunction.h  Layer.cpp  Layer.h  LayerConstructionInfo.h  Network.cpp  Network.h  cxr_header.h
lib/IFunction/: IFunction.h
src/: CMakeLists.txt  Layertest.cpp  fileTest.cpp  main.cpp
